fixed contact buttons

--- a/index.html
+++ b/index.html
@@ -46,34 +46,38 @@
                 </h1>
             </div>
         </div>
-        <div class="row">
+        <div class="contact-icons row mt-3">
+            <div class="col-xs-1">
+                <a class="btn github" href="https://www.github.com/">
+                    <i class="fa fa-github"></i>
+                    <!-- <span class="mx-auto d-block">Github</span> -->
+                </a>
+            </div>
+            <div class="col-xs-1">
+                <a class="btn linkedin" href="https://www.linkedin.com/in/ronakwebdev/">
+                    <i class="fa fa-linkedin"></i>
+                    <!-- <span class="mx-auto d-block">LinkedIn</span> -->
+                </a>
+            </div>
+            <div class="col-xs-1">
+                <a class="btn email" href="mailto:ronakpat@uw.edu">
+                    <i class="fa fa-envelope"></i>
+                    <!-- <span class="mx-auto d-block">Email</span> -->
+                </a>
+            </div>
+            <div class="col-xs-1">
+                <a class="btn resume" href="assets/resume.pdf">
+                    <i class="fa fa-file"></i>
+                    <!-- <span class="mx-auto d-block">Resume</span> -->
+                </a>
+            </div>
+        </div>
+        <!-- <div class="row mt-5">
             <div class="col-auto toolkit">
                 <h2>My toolkit</h2>
 
             </div>
-        </div>
-        <div class="row">
-            <div class="col">
-                <div class="contact-icons">
-                    <a href="https://www.github.com/">
-                        <i class="fa mx-auto d-block fa-github"></i>
-                        <span class="mx-auto d-block">Github</span>
-                    </a>
-                    <a href="https://www.linkedin.com/in/ronakwebdev/">
-                        <i class="fa mx-auto d-block fa-linkedin"></i>
-                        <span class="mx-auto d-block">LinkedIn</span>
-                    </a>
-                    <a href="mailto:ronakpat@uw.edu">
-                        <i class="fa mx-auto d-block fa-envelope"></i>
-                        <span class="mx-auto d-block">Email</span>
-                    </a>
-                    <a href="assets/resume.pdf">
-                        <i class="fa mx-auto d-block fa-file"></i>
-                        <span class="mx-auto d-block">Resume</span>
-                    </a>
-                </div>
-            </div>
-        </div>
+        </div> -->
         <div class="work">
             <h2 class="mb-5">Here's some of my work</h2>
             <div class="row">
@@ -110,7 +114,8 @@
                                             Cosystems is a company that has provided telecom services for over 30 years.
                                         </p>
                                         <p class="mb-3 lead">
-                                            The site can be viewed <a href="http://www.cosystems.com" target="_blank">here</a>.
+                                            The site can be viewed <a href="http://www.cosystems.com"
+                                                target="_blank">here</a>.
                                         </p>
                                         <h5>Tools Used:</h5>
                                         <ul>
@@ -248,12 +253,14 @@
                                             <img class="card-img-top" src="assets/img/IMDBdata.png" alt="">
                                         </div>
                                         <p class="mb-3 mt-5 lead">
-                                            This is a statistical analysis of movies and their ratings. The project was done in R, and was made into an interactive 
-                                            webpage using Shinyapps. It explores different criteria such as movie age, genre, and cast, and displays certain insights
-                                            on their effect on movie ratings. 
+                                            This is a statistical analysis of movies and their ratings. The project was
+                                            done in R, and was made into an interactive
+                                            webpage using Shinyapps. It explores different criteria such as movie age,
+                                            genre, and cast, and displays certain insights
+                                            on their effect on movie ratings.
                                         </p>
                                         <p class="mb-3 lead">
-                                            The codebase can be viewed 
+                                            The codebase can be viewed
                                             <a href="https://github.com/jharshe-1730199/final-project">here</a>
                                             A demo can be viewed
                                             <a href="https://ronakpatel.shinyapps.io/IMDB-Data-Report/">here</a>.
