--- a/index.html
+++ b/index.html
@@ -48,27 +48,27 @@
         </div>
         <div class="contact-icons row mt-3">
             <div class="col-xs-1">
-                <a class="btn github" href="https://www.github.com/">
+                <a class="btn github" href="https://www.github.com/ronak0624" title="Github" target="_blank">
                     <i class="fa fa-github"></i>
-                    <!-- <span class="mx-auto d-block">Github</span> -->
+
                 </a>
             </div>
             <div class="col-xs-1">
-                <a class="btn linkedin" href="https://www.linkedin.com/in/ronakwebdev/">
+                <a class="btn linkedin" href="https://www.linkedin.com/in/ronakwebdev/" title="LinkedIn" target="_blank">
                     <i class="fa fa-linkedin"></i>
-                    <!-- <span class="mx-auto d-block">LinkedIn</span> -->
+
                 </a>
             </div>
             <div class="col-xs-1">
-                <a class="btn email" href="mailto:ronakpat@uw.edu">
+                <a class="btn email" href="mailto:ronakpat@uw.edu" title="My Email">
                     <i class="fa fa-envelope"></i>
-                    <!-- <span class="mx-auto d-block">Email</span> -->
+
                 </a>
             </div>
             <div class="col-xs-1">
-                <a class="btn resume" href="assets/resume.pdf">
+                <a class="btn resume" href="assets/resume.pdf" title="My Resume" target="_blank">
                     <i class="fa fa-file"></i>
-                    <!-- <span class="mx-auto d-block">Resume</span> -->
+
                 </a>
             </div>
         </div>
@@ -81,65 +81,6 @@
         <div class="work">
             <h2 class="mb-5">Here's some of my work</h2>
             <div class="row">
-                <div class="col-md">
-                    <div class="project" data-toggle="modal" data-target="#cosystems-modal">
-                        <div class="card project-card">
-                            <img class="card-img-top" src="assets/img/cosystems.png" alt="">
-                            <div class="card-body">
-                                <h4 class="card-title">Cosystems, Inc</h4>
-                                <p class="card-text">Legacy telecom hardware provider company site.</p>
-                            </div>
-                        </div>
-                        <div class="modal fade" id="cosystems-modal" tabindex="-1" role="dialog"
-                            aria-labelledby="cosystemsDescription" aria-hidden="true">
-                            <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
-                                <div class="modal-content">
-                                    <div class="modal-header">
-                                        <h2 class="modal-title" id="cosystemsTitle">Cosystems.com</h2>
-                                        <button class="btn btn-sm btn-circle btn-neutral align-self-start"
-                                            data-dismiss="modal" type="button" aria-label="Close">
-                                            <svg class="gi gi-close fs-sm" width="1em" height="1em" viewBox="0 0 24 24"
-                                                fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-                                                <path
-                                                    d="M13.41 12l4.3-4.29a1 1 0 1 0-1.42-1.42L12 10.59l-4.29-4.3a1 1 0 0 0-1.42 1.42l4.3 4.29-4.3 4.29a1 1 0 0 0 0 1.42 1 1 0 0 0 1.42 0l4.29-4.3 4.29 4.3a1 1 0 0 0 1.42 0 1 1 0 0 0 0-1.42z">
-                                                </path>
-                                            </svg>
-                                        </button>
-                                    </div>
-                                    <div class="modal-body">
-                                        <div class="container">
-                                            <img class="card-img-top" src="assets/img/cosystems.png" alt="">
-                                        </div>
-                                        <p class="mb-3 mt-5 lead">
-                                            Cosystems is a company that has provided telecom services for over 30 years.
-                                        </p>
-                                        <p class="mb-3 lead">
-                                            The site can be viewed <a href="http://www.cosystems.com"
-                                                target="_blank">here</a>.
-                                        </p>
-                                        <h5>Tools Used:</h5>
-                                        <ul>
-                                            <li>HTML</li>
-                                            <li>CSS</li>
-                                            <li>JavaScript</li>
-                                            <li>Express</li>
-                                            <li>Node</li>
-                                            <li>Heroku (Deployment)</li>
-                                        </ul>
-                                    </div>
-                                    <div class="modal-footer">
-                                        <div class="demo-repo">
-                                            <a href="https://github.com/ronak0624/swurf-savings" class="left"
-                                                target="_blank">Github Repository</a>
-                                            <a href="https://swurf.herokuapp.com/" class="right"
-                                                target="_blank">Demo</a>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
                 <div class="col-md">
                     <div class="project" data-toggle="modal" data-target="#swurf-modal">
                         <div class="card project-card">
@@ -208,14 +149,73 @@
                                             <li>Heroku (Deployment)</li>
                                         </ul>
                                     </div>
-                                    <div class="modal-footer">
+                                    <!-- <div class="modal-footer">
                                         <div class="demo-repo">
                                             <a href="https://github.com/ronak0624/swurf-savings" class="left"
                                                 target="_blank">Github Repository</a>
                                             <a href="https://swurf.herokuapp.com/" class="right"
                                                 target="_blank">Demo</a>
                                         </div>
+                                    </div> -->
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md">
+                    <div class="project" data-toggle="modal" data-target="#cosystems-modal">
+                        <div class="card project-card">
+                            <img class="card-img-top" src="assets/img/cosystems.png" alt="">
+                            <div class="card-body">
+                                <h4 class="card-title">Cosystems, Inc</h4>
+                                <p class="card-text">Legacy telecom hardware provider company site.</p>
+                            </div>
+                        </div>
+                        <div class="modal fade" id="cosystems-modal" tabindex="-1" role="dialog"
+                            aria-labelledby="cosystemsDescription" aria-hidden="true">
+                            <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <h2 class="modal-title" id="cosystemsTitle">Cosystems.com</h2>
+                                        <button class="btn btn-sm btn-circle btn-neutral align-self-start"
+                                            data-dismiss="modal" type="button" aria-label="Close">
+                                            <svg class="gi gi-close fs-sm" width="1em" height="1em" viewBox="0 0 24 24"
+                                                fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                                                <path
+                                                    d="M13.41 12l4.3-4.29a1 1 0 1 0-1.42-1.42L12 10.59l-4.29-4.3a1 1 0 0 0-1.42 1.42l4.3 4.29-4.3 4.29a1 1 0 0 0 0 1.42 1 1 0 0 0 1.42 0l4.29-4.3 4.29 4.3a1 1 0 0 0 1.42 0 1 1 0 0 0 0-1.42z">
+                                                </path>
+                                            </svg>
+                                        </button>
                                     </div>
+                                    <div class="modal-body">
+                                        <div class="container">
+                                            <img class="card-img-top" src="assets/img/cosystems.png" alt="">
+                                        </div>
+                                        <p class="mb-3 mt-5 lead">
+                                            Cosystems is a company that has provided telecom services for over 30 years.
+                                        </p>
+                                        <p class="mb-3 lead">
+                                            The site can be viewed <a href="http://www.cosystems.com"
+                                                target="_blank">here</a>.
+                                        </p>
+                                        <h5>Tools Used:</h5>
+                                        <ul>
+                                            <li>HTML</li>
+                                            <li>CSS</li>
+                                            <li>JavaScript</li>
+                                            <li>Express</li>
+                                            <li>Node</li>
+                                            <li>Heroku (Deployment)</li>
+                                        </ul>
+                                    </div>
+                                    <!-- <div class="modal-footer">
+                                        <div class="demo-repo">
+                                            <a href="https://github.com/ronak0624/swurf-savings" class="left"
+                                                target="_blank">Github Repository</a>
+                                            <a href="https://swurf.herokuapp.com/" class="right"
+                                                target="_blank">Demo</a>
+                                        </div>
+                                    </div> -->
                                 </div>
                             </div>
                         </div>
@@ -261,9 +261,9 @@
                                         </p>
                                         <p class="mb-3 lead">
                                             The codebase can be viewed
-                                            <a href="https://github.com/jharshe-1730199/final-project">here</a>
-                                            A demo can be viewed
-                                            <a href="https://ronakpatel.shinyapps.io/IMDB-Data-Report/">here</a>.
+                                            <a href="https://github.com/jharshe-1730199/final-project" target="_blank">here, </a>
+                                            and a demo can be viewed
+                                            <a href="https://ronakpatel.shinyapps.io/IMDB-Data-Report/" target="_blank">here</a>.
                                         </p>
                                         <h5>Tools Used:</h5>
                                         <ul>
@@ -275,14 +275,14 @@
                                             <li>Heroku (Deployment)</li>
                                         </ul>
                                     </div>
-                                    <div class="modal-footer">
+                                    <!-- <div class="modal-footer">
                                         <div class="demo-repo">
                                             <a href="https://github.com/jharshe-1730199/final-project" class="left"
                                                 target="_blank">Github Repository</a>
                                             <a href="https://ronakpatel.shinyapps.io/IMDB-Data-Report/" class="right"
                                                 target="_blank">Demo</a>
                                         </div>
-                                    </div>
+                                    </div> -->
                                 </div>
                             </div>
                         </div>
