--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
                 <div class="col-md">
                     <div class="project" data-toggle="modal" data-target="#imdb-modal">
                         <div class="card project-card">
-                            <img class="card-img-top" src="assets/img/IMDBdata.png" alt="">
+                            <img class="card-img-top" src="assets/img/IMDBData.png" alt="">
                             <div class="card-body">
                                 <h4 class="card-title">IMDB Data Report</h4>
                                 <p class="card-text">A data report on movies and their ratings</p>
