tools used changed for R"

--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
                                     </div>
                                     <div class="modal-body">
                                         <div class="container">
-                                            <img class="card-img-top" src="assets/img/IMDBdata.png" alt="">
+                                            <img class="card-img-top" src="assets/img/IMDBData.png" alt="">
                                         </div>
                                         <p class="mb-3 mt-5 lead">
                                             This is a statistical analysis of movies and their ratings. The project was
@@ -267,12 +267,9 @@
                                         </p>
                                         <h5>Tools Used:</h5>
                                         <ul>
-                                            <li>React</li>
-                                            <li>Express</li>
-                                            <li>MongoDB</li>
-                                            <li>Node</li>
-                                            <li>Adobe XD (Wireframes)</li>
-                                            <li>Heroku (Deployment)</li>
+                                            <li>R</li>
+                                            <li>Tidyverse</li>
+                                            <li>Shiny</li>
                                         </ul>
                                     </div>
                                     <!-- <div class="modal-footer">
